--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,73 @@
+/*navbar*/
+#topbar{
+	position:fixed;
+	top:0;
+	display:block;
+	width:100%;
+	height:75px;
+	background-color: none;
+	z-index:1000;
+}
+#bottombar{
+	position:absolute;
+	bottom:0;
+	display:block;
+	width:100%;
+	height:75px;
+	background-color:#000;
+	z-index:2;
+}
+
+.nidlogo{
+	position:absolute;
+	left:50px;
+	top:50%;
+	margin-top:-15px;
+	width:200px;
+	height:30px;
+	display:block;
+	z-index:2;
+	background-image:url(../img/NID_white_logo.png);
+	background-repeat:no-repeat;
+}
+.topbarlinks{
+	position:absolute;
+	right:50px;
+	top:50%;
+	height:32px;
+	margin-top:-16px;
+	display:block;
+	width:300px;
+}
+
+.topbarlinks h4.white{
+	color:#fff;
+	bottom:10px;
+	text-align:right;
+}
+
+#topbar .topbarlinks .btn {
+  /*background: #FF00C3;
+  -webkit-border-radius: 2;
+  -moz-border-radius: 2;
+  border-radius: 2px;
+  border-color: #982cff;
+	/*font-family: 'Roboto', sans-serif;
+	font-weight:300;*/
+	border:1px solid #982cff;
+  color: #17ffdd !important;
+  font-size: 14px;
+  padding: 10px 20px 10px 20px;
+  margin: 0 !important;
+  text-decoration: none;
+}
+/*#topbar .topbarlinks .btn{border:1px solid yellow;}*/
+
+#topbar .topbarlinks .btn:hover {
+  background: #17ffdd;
+  color: #982cff !important;
+}
+
 /*HOME section*/
 #home {
 	background: #020507;
