--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+
 /*RESET CSS BEGINS*/
 html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p, blockquote, pre,a, abbr, acronym, address, big, cite, code,del, dfn, em, img, ins, kbd, q, s, samp,small, strike, strong, sub, sup, tt, var,b, u, i, center,
 dl, dt, dd, ol, ul, li,fieldset, form, label, legend,table, caption, tbody, tfoot, thead, tr, th, td,article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output,ruby, section, summary,time, mark, audio, video {margin: 0;
@@ -20,9 +21,9 @@ table {border-collapse: collapse;border-spacing: 0;}
 
 /*NAVBAR CSS BEGINS*/
 #topbar{position:fixed;top:0;display:block;width:100%;height:75px;background-color: none;z-index:1000;}
-#bottombar{position:absolute;bottom:0;display:block;width:100%;height:75px;background-color:#000;z-index:2;}
-.nidlogo{position:absolute;left:50px;top:50%;margin-top:-15px;width:200px;height:30px;display:block;z-index:2;background-image:url(../img/NID_white_logo.png);background-repeat:no-repeat;}
-.topbarlinks{position:absolute;right:50px;top:50%;height:32px;margin-top:-16px;display:block;width:300px;}
+#bottombar{position:absolute;bottom:0;display:block;width:100%;height:75px;background-color:#000;z-index:700;}
+.nidlogo{position:absolute;left:50px;top:50%;margin-top:-15px;width:200px;height:30px;display:block;z-index:700;background-image:url(../img/NID_white_logo.png);background-repeat:no-repeat;}
+.topbarlinks{position:absolute;right:50px;top:50%;height:32px;margin-top:-16px;display:block;width:300px;z-index:700;}
 .topbarlinks h4.white{color:#fff;bottom:10px;text-align:right;}
 #topbar .topbarlinks .btn {/*background: #FF00C3;-webkit-border-radius: 2;-moz-border-radius: 2;border-radius: 2px;border-color: #982cff;/*font-family: 'Roboto', sans-serif;font-weight:300;*/border:1px solid #982cff;color: #17ffdd !important;font-size: 14px;padding: 10px 20px 10px 20px;margin: 0 !important;text-decoration: none;}
 #topbar .topbarlinks .btn:hover {background: #17ffdd;color: #982cff !important;}
@@ -83,8 +84,12 @@ table {border-collapse: collapse;border-spacing: 0;}
 }
 
 /* DFrost Logo css */
-.logo-wrapper {display: block; float:left; height: 100%; width: 100%; min-width: 500px; min-height: 500px; 
-	background: url("../img/logo.svg") no-repeat center center; margin-top: 100px}
+.logo-wrapper {display: block; float:left; height: 100%; width: 100%; min-width: 250px; min-height: 250px; 
+	/*background: url("../img/logo.svg") no-repeat center center;*/ }
+
+.logo-wrapper #logo_back {position: absolute; z-index: 765; background: url("../img/layer1.png") no-repeat;top: 50px; left: 38%; margin-left: -130px; height: inherit; width: inherit; }
+.logo-wrapper #logo_mid {position: absolute; z-index: 766; background: url("../img/layer2.png") no-repeat;top: 50px; left: 38%; margin-left: -130px; height: inherit; width: inherit; }
+.logo-wrapper #logo_front {position: absolute; z-index: 767; background: url("../img/layer3.png") no-repeat;top: 50px; left: 38%; margin-left: -130px; height: inherit; width: inherit;}
 
 /* ------------------------------------------------------------------- 
  * responsive:
