--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ table {border-collapse: collapse;border-spacing: 0;}
 #home .row {max-width: 1290px;}
 #home.home-static {background-image: url(../images/home-bg.jpg) no-repeat center;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;}
 #home.home-particles {overflow: hidden;background: #020507 /*url('../img/star_mid.png') no-repeat center/ 100%*/;}
-#home.home-particles .pg-canvas {position: absolute;top: 0;left: 0;height: 100% !important;width: 100% !important;opacity: .35;background: url('../img/star_tiny.png') no-repeat center/ 100%;}
+#home.home-particles .pg-canvas {position: absolute;top: 0;left: 0;height: 100% !important;width: 100% !important;opacity: .35;background: url('../img/star_tiny.png') no-repeat center/ cover, url('../img/blocks-bg.jpg') no-repeat center/ cover;}
 #home.home-particles .shadow-overlay {display: none;}
 #home.home-slides {height: 100% !important;}
 
@@ -87,9 +87,20 @@ table {border-collapse: collapse;border-spacing: 0;}
 .logo-wrapper {display: block; float:left; height: 100%; width: 100%; min-width: 250px; min-height: 250px; 
 	/*background: url("../img/logo.svg") no-repeat center center;*/ }
 
-.logo-wrapper #logo_back {position: absolute; z-index: 765; background: url("../img/layer1.png") no-repeat;top: 70px; left: 40%; margin-left: -130px; height: inherit; width: inherit; }
-.logo-wrapper #logo_mid {position: absolute; z-index: 766; background: url("../img/layer2.png") no-repeat;top: 70px; left: 40%; margin-left: -130px; height: inherit; width: inherit; }
-.logo-wrapper #logo_front {position: absolute; z-index: 767; background: url("../img/layer3.png") no-repeat;top: 70px; left: 40%; margin-left: -130px; height: inherit; width: inherit;}
+/*.logo-wrapper.fadeIn {
+
+  -moz-animation-duration: 3s;
+  -webkit-animation-duration: 3s;
+  animation-duration: 3s;
+  /*-moz-animation-delay: 2s;*/
+  /*-vendor-animation-iteration-count: infinite;*/
+
+
+
+.logo-wrapper #logo_back {position: absolute; z-index: 765; background: url("../img/layer1.png") no-repeat;top: 70px; left: 40%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 1s;   -webkit-animation-duration: 1s;   animation-duration: 1s;}
+.logo-wrapper #logo_mid {position: absolute; z-index: 766; background: url("../img/layer2.png") no-repeat;top: 70px; left: 40%; margin-left: -130px; height: inherit; width: inherit; -moz-animation-duration: 2s;   -webkit-animation-duration: 2s;   animation-duration: 2s;}
+.logo-wrapper #logo_front {position: absolute; z-index: 767; background: url("../img/layer3.png") no-repeat;top: 70px; left: 40%; margin-left: -130px; height: inherit; width: inherit;  /*-moz-animation-delay: 1s; -webkit-animation-delay: 1s; animation-delay: 1s;*/ -moz-animation-duration: 3s;  -webkit-animation-duration: 3s;   animation-duration: 3s;}
+
 
 /* ------------------------------------------------------------------- 
  * responsive:
