--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,12 @@ table {border-collapse: collapse;border-spacing: 0;}
 
 
 /*NAVBAR CSS BEGINS*/
-#topbar{position:fixed;top:0;display:block;width:100%;height:75px;background-color: none;z-index:1000;}
+#topbar{position:fixed;top:0;display:block;float:none;width:100%;height:auto;background: none;z-index:1000;/*border:1px solid yellow;*/}
 #bottombar{position:absolute;bottom:0;display:block;width:100%;height:75px;background-color:#000;z-index:700;}
-.nidlogo{position:absolute;left:50px;top:50%;margin-top:-15px;width:200px;height:30px;display:block;z-index:700;background-image:url(../img/NID_white_logo.png);background-repeat:no-repeat;}
-.topbarlinks{position:absolute;right:50px;top:50%;height:32px;margin-top:-16px;display:block;width:300px;z-index:700;}
+.nidlogo{display:block;float:left;margin:20px 0 20px 20px;width:20.8%;height:30px;z-index:700;background-image:url(../img/NID_white_logo.png);background-repeat:no-repeat;/*border:1px solid yellow;*/}
+.topbarlinks{display:block;float:left;height:30px;margin:20px 20px 20px 0;width:76%;z-index:700;}
 .topbarlinks h4.white{color:#fff;bottom:10px;text-align:right;}
-#topbar .topbarlinks .btn {/*background: #FF00C3;-webkit-border-radius: 2;-moz-border-radius: 2;border-radius: 2px;border-color: #982cff;/*font-family: 'Roboto', sans-serif;font-weight:300;*/border:1px solid #982cff;color: #17ffdd !important;font-size: 14px;padding: 10px 20px 10px 20px;margin: 0 !important;text-decoration: none;}
+#topbar .topbarlinks .btn {border: 1px solid #982cff; color: #17ffdd !important; font-size: 14px; padding: 10px 20px; margin: 0 !important; text-decoration: none; vertical-align: middle; float: right;}
 #topbar .topbarlinks .btn:hover {background: #17ffdd;color: #982cff !important;}
 /*NAVBAR CSS ENDS*/
 
@@ -39,11 +39,12 @@ table {border-collapse: collapse;border-spacing: 0;}
 #home .row {max-width: 1290px;}
 #home.home-static {background-image: url(../images/home-bg.jpg) no-repeat center;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;}
 #home.home-particles {overflow: hidden;background: #020507 /*url('../img/star_mid.png') no-repeat center/ 100%*/;}
-#home.home-particles .pg-canvas {position: absolute;top: 0;left: 0;height: 100% !important;width: 100% !important;opacity: .35;background: url('../img/star_tiny.png') no-repeat center/ cover, url('../img/blocks-bg.jpg') no-repeat center/ cover;}
+#home.home-particles .pg-canvas {position: absolute;top: 0;left: 0;height: 100% !important;width: 100% !important;opacity: .35;background: url('../img/star_tiny.png') no-repeat center/ cover, url('../img/bg3.png') no-repeat center/ cover;}
 #home.home-particles .shadow-overlay {display: none;}
 #home.home-slides {height: 100% !important;}
 
-.content-wrap-table {width: 100%;height: 100%;display: table;position: relative;}
+
+/*.content-wrap-table {width: 100%;height: 100%;display: table;position: relative;}
 .main-content-tablecell {display: table-cell;vertical-align: bottom;z-index: 700;}
 .main-content-tablecell .row {position: relative;padding-top: 4.2rem;padding-bottom: 15rem;}
 .main-content-tablecell #counter {margin-bottom: 4.2rem;}
@@ -59,7 +60,7 @@ table {border-collapse: collapse;border-spacing: 0;}
 .scroll-icon .scroll-text {font-family: "roboto-bold", sans-serif;font-size: 1.5rem;color: #FFFFFF;margin-top: 1.5rem;}
 .scroll-icon .end-top {content: "";background-color: #FFFFFF;width: 7px;height: 7px;border-radius: 50%;display: inline-block;vertical-align: top;position: absolute;top: -6px;right: -4px;}
 .scroll-icon .mouse {position: absolute;height: 38px;width: 25px;border: 3px solid #FFFFFF;border-radius: 12px;right: -13px;top: 10px;display: block;text-align: center;z-index: 700;-webkit-animation: vertical 3s ease infinite;animation: vertical 3s ease infinite;}
-.scroll-icon .mouse::before {content: "";display: block;height: 5px;width: 3px;background-color: #FFFFFF;position: absolute;top: 6px;left: 50%;margin-left: -1.5px;border-radius: 2px;}
+.scroll-icon .mouse::before {content: "";display: block;height: 5px;width: 3px;background-color: #FFFFFF;position: absolute;top: 6px;left: 50%;margin-left: -1.5px;border-radius: 2px;}*/
 @-webkit-keyframes vertical {
 	0%, 60%, 80%, 100% {
 		-webkit-transform: translateY(0);
