--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ body {
   right: 0;
   top: 0;
   position: absolute;
-  background-color: rgba(33, 178, 160, 0.06);
+  background-color: rgb(255, 0, 195, 0.3);
   border-radius: 50%;
   z-index: 23;
   overflow: hidden;
@@ -223,7 +223,7 @@ body {
   right: -160px;
   top: -160px;
   border-radius: 50%;
-  background-color: rgba(66, 215, 177, 0.05);
+  background-color: rgb(152, 44, 255, 0.2);
 }
 .oppenned span:nth-child(3) {
   -webkit-transform: rotate(-45deg) translateY(-10px) translateX(10px);
