--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ table {border-collapse: collapse;border-spacing: 0;}
 
 /*general Body Font*/
 body {
-  font-family: Helvetica, sans-serif;
+  font-family: 'Open Sans', sans-serif
 }
 
 /*NAVBAR CSS BEGINS*/
