--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,10 @@ q:before, q:after {content: '';content: none;}
 table {border-collapse: collapse;border-spacing: 0;}
 /*RESET CSS ENDS*/
 
+/*body {
+	overflow: hidden !important;
 
+}*/
 /*NAVBAR CSS BEGINS*/
 #topbar{position:fixed;top:0;display:block;width:100%;height:75px;background-color: none;z-index:1000;}
 #bottombar{position:absolute;bottom:0;display:block;width:100%;height:75px;background-color:#000;z-index:700;}
